--- a/src/pages/articles/let-the-browser-do-it-for-you.mdx
+++ b/src/pages/articles/let-the-browser-do-it-for-you.mdx
@@ -4,7 +4,7 @@ import { ArticleLayout } from "../../modules/ArticleLayout";
 
 ![a browser](/browser.png)
 
-Browsers are an *incredible* piece of engineering. Heavy listing, re-invent the wheel.
+Browsers are an _incredible_ piece of engineering. Heavy listing, re-invent the wheel.
 
 This is a **non-exhaustive** list.
 
