--- a/src/pages/articles/how-to-fix-a-failing-dependency-audit/index.mdx
+++ b/src/pages/articles/how-to-fix-a-failing-dependency-audit/index.mdx
@@ -1,4 +1,4 @@
-import { ArticleLayout } from "../../modules/ArticleLayout";
+import { ArticleLayout } from "../../../modules/ArticleLayout";
 
 # How to fix a failing dependency audit
 
