--- a/src/pages/posts/how-to-fix-a-failing-dependency-audit/index.mdx
+++ b/src/pages/posts/how-to-fix-a-failing-dependency-audit/index.mdx
@@ -1,12 +1,10 @@
+import browserImage from "./browser.png";
+
 export const metadata = {
   "title": "How to fix a failing dependency audit",
   "date": "2022-02-20T19:26:54.937Z",
-  "image": require("./browser.png").default.src
+  "image": browserImage.src
 }
-
-<ArticleHead metadata={metadata} />
-
-<Image alt="A browser browser lifting weights" src={metadata.image} />
 
 ## Dependency audit
 
