--- a/src/pages/posts/let-the-browser-do-it-for-you/index.mdx
+++ b/src/pages/posts/let-the-browser-do-it-for-you/index.mdx
@@ -1,12 +1,10 @@
+import browserImage from "./browser.png";
+
 export const metadata = {
   "title": "Let the browser do it for you",
   "date": "2022-02-20T19:26:54.937Z",
-  "image": require("./browser.png").default.src
+  "image": browserImage.src
 }
-
-<ArticleHead metadata={metadata} />
-
-<Image alt="A browser browser lifting weights" src={metadata.image} />
 
 Browsers are an _incredible_ piece of engineering. Heavy listing, re-invent the wheel.
 
