--- a/src/pages/posts/how-to-fix-a-failing-dependency-audit/index.mdx
+++ b/src/pages/posts/how-to-fix-a-failing-dependency-audit/index.mdx
@@ -1,9 +1,11 @@
 import browserImage from "./browser.png";
 
 export const metadata = {
-  "title": "How to fix a failing dependency audit",
   "date": "2022-02-20T19:26:54.937Z",
-  "image": browserImage.src
+  "title": "How to fix a failing dependency audit",
+  "description": "A dummy description",
+  "image": browserImage.src,
+  "imageAlt": "A little browser lifting weights"
 }
 
 ## Dependency audit
