--- a/src/pages/posts/markdown/index.mdx
+++ b/src/pages/posts/markdown/index.mdx
@@ -1,9 +1,11 @@
 import browserImage from "./browser.png";
 
 export const metadata = {
-  "title": "Markdown cheat sheet",
   "date": "2021-02-20T19:26:54.937Z",
-  "image": browserImage.src
+  "title": "Markdown cheat sheet",
+  "description": "A dummy description",
+  "image": browserImage.src,
+  "imageAlt": "A little browser lifting weights"
 }
 
 # H1
