--- a/src/pages/posts/how-to-fix-a-failing-dependency-audit/index.mdx
+++ b/src/pages/posts/how-to-fix-a-failing-dependency-audit/index.mdx
@@ -2,8 +2,8 @@ import browserImage from "./browser.png";
 
 export const metadata = {
   "date": "2022-02-20T19:26:54.937Z",
-  "title": "How to fix a failing dependency audit",
-  "description": "A dummy description",
+  "title": "How to Fix a Failing Dependency Audit",
+  "description": "A dummy description that is honestly quite long",
   "image": browserImage.src,
   "imageAlt": "A little browser lifting weights"
 }
