--- a/src/pages/posts/let-the-browser-do-it-for-you/index.mdx
+++ b/src/pages/posts/let-the-browser-do-it-for-you/index.mdx
@@ -1,10 +1,8 @@
-import browserImage from "./browser.png";
-
 export const metadata = {
   "date": "2022-02-18T19:26:54.937Z",
   "title": "Let the Browser Do It for You",
   "description": "A dummy description",
-  "image": browserImage.src,
+  "image": require("./browser.png"),
   "imageAlt": "A little browser lifting weights"
 }
 
