--- a/src/pages/posts/markdown/index.mdx
+++ b/src/pages/posts/markdown/index.mdx
@@ -1,10 +1,8 @@
-import browserImage from "./browser.png";
-
 export const metadata = {
   "date": "2021-02-20T19:26:54.937Z",
   "title": "Markdown cheat sheet",
   "description": "A dummy description",
-  "image": browserImage.src,
+  "image": require("./browser.png"),
   "imageAlt": "A little browser lifting weights"
 }
 
