--- a/src/pages/posts/markdown-cheat-sheet/index.mdx
+++ b/src/pages/posts/markdown-cheat-sheet/index.mdx
@@ -112,3 +112,11 @@ const test = "123";
 - const test = "123";
 + const test = "1234";
 ```
+
+## Code highlights
+
+```typescript highlight=3
+const test = "1234";
+
+console.log(test);
+```
