--- a/src/pages/posts/watch-out-for-memory-leaks/index.mdx
+++ b/src/pages/posts/watch-out-for-memory-leaks/index.mdx
@@ -8,7 +8,7 @@ export const metadata = {
 
 ## resizeObserver.disconnect
 
-```tsx
+```tsx highlight=9,17,28,29
 import React, { FC, useEffect, useRef, useState } from "react";
 
 interface Dimensions {
