--- a/src/pages/posts/let-the-browser-do-it-for-you/index.mdx
+++ b/src/pages/posts/let-the-browser-do-it-for-you/index.mdx
@@ -6,9 +6,9 @@ export const metadata = {
   imageAlt: "A little browser lifting weights",
 };
 
-Browsers are an incredible feat of engineering. The Chromium codebase contains about [35 million lines of source code](<https://en.wikipedia.org/wiki/Chromium_(web_browser)#:~:text=35%20million%20source%20lines%20of%20code.>) according to wikipedia. It's honestly so mind boggling to me that they work at all.
+Browsers are an incredible feat of engineering. According to wikipedia, the Chromium codebase contains about [35 million lines of source code](<https://en.wikipedia.org/wiki/Chromium_(web_browser)#:~:text=35%20million%20source%20lines%20of%20code.>). It's honestly so mind boggling to me that they work at all.
 
-While browsers can do a ton of stuff, there are things we developers have to implement ourselves because they are not supported natively.
+While browsers can do a ton of stuff, there are features we developers have to implement ourselves because they are not supported natively.
 
 In those cases we either:
 
