--- a/src/pages/posts/markdown-cheat-sheet/index.mdx
+++ b/src/pages/posts/markdown-cheat-sheet/index.mdx
@@ -60,6 +60,14 @@ Strikethrough uses two tildes. ~~Scratch this~~.
 
 Strikethrough uses two tildes. ~~Scratch this~~.
 
+## Divider
+
+```markdown
+---
+```
+
+---
+
 ## Lists
 
 ```markdown
