--- a/src/pages/posts/let-the-browser-do-it-for-you/index.mdx
+++ b/src/pages/posts/let-the-browser-do-it-for-you/index.mdx
@@ -98,7 +98,7 @@ This is even fully supported by Node.js since version 10 ✨
 
 ### Manipulating URLs
 
-I gave birth to this monstrosity more than once:
+First off, don't do this. I gave birth to this monstrosity more than once:
 
 ```javascript
 const queryString = "http://localhost?test=1".split("?")[1];
